Kubernetes/hawk-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hawk
  namespace: hawk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hawk
  template:
    metadata:
      labels:
        app: hawk
    spec:
      serviceAccountName: hawk-sa
      containers:
      - name: hawk-ctr
        image: hawk-go:latest
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "1024Mi"
            cpu: "500m" 

        volumeMounts:
          - name: hawk-config
            mountPath: /etc/hawk/configlist.yaml
            readOnly: true
          - name: job-template
            mountPath: /etc/hawk/template/job-git.yaml
            readOnly: true
          - name: hawk-shared-volume
            mountPath: /data/shared
          - name: git-token-secret
            mountPath: /etc/hawk/secrets/git-secret-token
            readOnly: true
            
      volumes:
        - name: hawk-config
          configMap:
            name: hawk-config
        - name: job-template
          configMap: 
            name: job-template
        - name: hawk-shared-volume
          persistentVolumeClaim:
            claimName: hawk-shared-pvc
        - name: git-token-secret
          secret:
            secretName: git-secret-token
            optional: true
