Kubernetes/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: hawk-gateway
  namespace: hawk
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: hawk.k8s.net
#    - name: https
#      protocol: HTTPS
#      port: 443
#      hostname: hawk.k8s.net
#      tls:
#        mode: Terminate
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hawk-route
  namespace: hawk
spec:
  parentRefs:
    - name: hawk-gateway
  hostnames:
    - hawk.k8s.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hawk-apiserver-svc
          port: 3000
    - matches:
        - path:
            type: PathPrefix
            value: /v1
    #      headers:
    #      - type: Exact
    #        name: env
    #        value: test
      backendRefs:
      - name: hawk-ui-svc
        port: 5000
